[package]
name = "wordletron"
version = "0.2.0"
authors = ["Chris Copeland <chris@chrisnc.net>"]
description = "A solver for and command-line version of Wordle"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/chrisnc/wordletron"
documentation = "https://docs.rs/wordletron"
readme = "README.md"
keywords = ["wordle"]
categories = ["games"]

[dependencies]
custom_derive = "0.1.7"
indicatif = { version = "0.16.2", features = ["rayon"] }
itertools = "0.10.3"
newtype_derive = "0.1.6"
rand = "0.8.4"
rayon = "1.5.1"
rpassword = "6.0.1"
